--- a/Buying.css
+++ b/Buying.css
@@ -10,7 +10,7 @@
 body {
     font-family: "Spectral", serif;
     background-color: #63a91f;
-    background-image: linear-gradient(314deg, #63a91f 0%, #1a512e 74%);
+    background-image: linear-gradient(310deg, #d0ffa1 0%, rgb(0, 163, 30), #1a512e 74%, rgb(0, 35, 5));
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -20,16 +20,18 @@ body {
     position: fixed;
     width: 100%;
     height: 80px;
-    background: rgba(0, 0, 0, 0.35);
+    background: rgba(0, 0, 0, 0.7);
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-bottom-right-radius: 40px;
+    border-bottom-left-radius: 40px;
 }
 
 .logo img {
-    height: 50px;
+    height: 67px;
 }
 
 .nav-links ul {
