--- a/style.css
+++ b/style.css
@@ -9,34 +9,35 @@
 .nv {
     width: 100%;
     height: 80px;
-    background: rgba(0, 0, 0, 0.35); ;  /* Make the background fully transparent */
+    background: rgba(0, 0, 0, 0.8); ;  /* Make the background fully transparent */
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
+    padding: 0 40px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Optional shadow for a subtle effect */
+    border-bottom-right-radius: 40px;
+    border-bottom-left-radius: 40px;
 }
 
 .logo img {
-    height: 50px;
+    height: 70px;
 }
 
 .nav-links ul {
     display: flex;
     list-style: none;
-    gap: 20px;
+    gap: 50px;
 }
 
 .nav-links ul li a {
     text-decoration: none;
-    color: #333;  /* Dark text for visibility */
+    color: #ffffff;  /* Dark text for visibility */
     font-size: 16px;
-    font-weight: bold;
     transition: color 0.3s;
 }
 
 .nav-links ul li a:hover {
-    color: green; /* Change color on hover */
+    color: rgb(0, 233, 210); /* Change color on hover */
 }
 
 
