--- a/Buying.css
+++ b/Buying.css
@@ -9,10 +9,15 @@
 /* Body Styling */
 body {
     font-family: "Spectral", serif;
-    background-color: #63a91f;
-    background-image: linear-gradient(310deg, #d0ffa1 0%, rgb(0, 163, 30), #1a512e 74%, rgb(0, 35, 5));
+    /* background-image: url(Images/darkbg3.jpg); */
     background-repeat: no-repeat;
     background-position: center;
+}
+.container{
+    background-image: url(Images/darkbg3.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat    ;
 }
 
 /* Navigation Bar */
@@ -20,7 +25,7 @@ body {
     position: fixed;
     width: 100%;
     height: 80px;
-    background: rgba(0, 0, 0, 0.7);
+    background: black;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -63,6 +68,11 @@ body {
     font-size: 2rem;
     color: #fff;
 }
+#title{
+    font-size: 7rem;
+    font-spacing: 2px;
+    color: #51cf9f;
+}
 
 /* Items Section */
 .items {
@@ -75,7 +85,7 @@ body {
     margin-bottom: 20px;
     display: flex;
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
@@ -133,4 +143,8 @@ body {
 
 .buy-now:active {
     background-color: #4a8a1b;
+}
+
+.item:hover{
+    background: linear-gradient(to right, #51cf9f, #fff);
 }
