--- a/Rental.css
+++ b/Rental.css
@@ -14,13 +14,18 @@ body {
     background-repeat: no-repeat;
     background-position: center;
 }
-
+.container{
+    background-image: url(Images/darkbg10.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat    ;
+}
 /* Navigation Bar */
 .nv {
     position: fixed;
     width: 100%;
     height: 80px;
-    background: rgba(0, 0, 0, 0.7);
+    background: black;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -63,6 +68,10 @@ body {
     font-size: 2rem;
     color: #fff;
 }
+#head{
+    font-size: 3.5rem;
+    color: #69dc16;
+}
 
 /* Items Section */
 .items {
@@ -75,8 +84,12 @@ body {
     margin-bottom: 20px;
     display: flex;
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+.item:hover{
+    background: linear-gradient(to right, #128257, #ffffff);
+    transition: transform 0.2s ease;
 }
 
 .pic {
