--- a/Rental.css
+++ b/Rental.css
@@ -69,8 +69,25 @@ body {
     color: #fff;
 }
 #head{
-    font-size: 3.5rem;
+    font-size: 3.7rem;
     color: #69dc16;
+    font-family: Abril Fatface;
+}
+#head2{
+    font-family: Unna;
+}
+.seachbar{
+    width: 50%;
+}
+.seachbar input{
+    width: 100%;
+    height: 40px;
+    padding: 0 35px 0 10px;
+    font-size: 1.1em;
+    border: none;
+    border-radius: 30px;
+    outline: none;
+    color: #000000;
 }
 
 /* Items Section */
